--- a/package.json
+++ b/package.json
@@ -24,9 +24,19 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "arrive": "2.4.1",
+    "bootstrap": "4.1.0",
+    "bootstrap-material-design": "4.1.1",
+    "bootstrap-notify": "3.1.3",
+    "chartist": "^0.11.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "jquery": "3.2.1",
+    "moment": "2.22.1",
+    "perfect-scrollbar": "1.1.0",
+    "popper.js": "1.14.3",
     "jspdf": "^1.5.3",
+    "ng-chartist": "^4.1.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -36,6 +46,7 @@
     "@angular/cli": "~7.3.8",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@types/chartist": "^0.9.44",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
