--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/flex-layout": "^7.0.0-beta.19",
     "@angular/forms": "~7.2.0",
     "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
@@ -32,11 +33,11 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jquery": "3.2.1",
+    "jspdf": "^1.5.3",
     "moment": "2.22.1",
+    "ng-chartist": "^4.1.0",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.14.3",
-    "jspdf": "^1.5.3",
-    "ng-chartist": "^4.1.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
