--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.14",
+    "@angular/animations": "^7.2.15",
     "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
@@ -36,6 +36,7 @@
     "jspdf": "^1.5.3",
     "moment": "2.22.1",
     "ng-chartist": "^4.1.0",
+    "ngx-toastr": "^10.0.2",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.14.3",
     "rxjs": "~6.3.3",
